Using session data to save data in in caché

--- a/src/app/componentes/principal/navbar/navbar.component.html
+++ b/src/app/componentes/principal/navbar/navbar.component.html
@@ -7,13 +7,12 @@
         <!--MENU-->
         <nav class="navbar menu" id="menu">
             <!-- Navbar content -->
-            <ul>
+            <ul>{{user.usuario}} 
+                {{user.empresa}}
                 <li><a [routerLink] ="['/index']" [routerLinkActive]="['active']">Inicio</a></li>
-                <li><a  [routerLinkActive]="['active']">Blog</a></li>
-                <li><a  [routerLinkActive]="['active']">Módulos</a></li>
-                <li><a  [routerLinkActive]="['active']">Catálogo</a></li>
                 <li><a  class="btn-red" [routerLink] ="['/home']" (click)="cerrarSesion()">Cerrar Sesión</a></li>
             </ul>
+                    
           </nav>
 
   <!-- Navbar -->
